--- a/package.json
+++ b/package.json
@@ -33,3 +33,11 @@
     "vite": "^5.4.2"
   }
 }
+"homepage": "https://YOUR-USERNAME.github.io/YOUR-REPO-NAME",
+"scripts": {
+  "dev": "vite",
+  "build": "vite build",
+  "preview": "vite preview",
+  "deploy": "gh-pages -d dist"
+}
+
